--- a/styles/globals.css
+++ b/styles/globals.css
@@ -23,6 +23,10 @@ h5 {
   @apply text-textgray font-mono uppercase;
 }
 
+hr {
+  margin: 2em 0;
+}
+
 button,
 button[type='submit'] {
   @apply py-2 px-4 bg-primary text-white rounded font-mono hover:shadow-glow;
