--- a/css/tailwind.css
+++ b/css/tailwind.css
@@ -64,3 +64,8 @@ button[type='submit'] {
 button.secondary {
   @apply bg-white text-black border;
 }
+
+.prose > ul > li > p {
+  margin-top: 0;
+  margin-bottom: 0;
+}
