--- a/styles/globals.css
+++ b/styles/globals.css
@@ -17,3 +17,18 @@ button.pay:disabled {
 input[type='checkbox'] {
   @apply mr-2;
 }
+
+.video-container {
+  position: relative;
+  width: 100%;
+  padding-bottom: 56.25%;
+}
+
+.video-container iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  border: 0;
+}
